--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="parcours parcours--anim1">
 				<div class="menu__body">
 					<p class="card__title">sept 1993 - juillet 1999</p>
-					<p class="card__text"><span>Diplôme d'ingénieur en informatique</span></p>
+					<p class="card__text"><span>Diplôme de Tehnicien supérieur en Informatique</span></p>
 					<p>Institut Supérieur Polytechnique de Madagascar</p>
 				</div>
 				<p class="titre">Détails</p>
